# formal

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  TODO.md  build.rs  comparison.md  foo.txt  ideas.txt  index.html  language.md  mess.txt  note.txt  sr.txt  temp.txt  temp2.txt  website.md
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: ci.yml
assets/: annotated_store_overflow.s  conflicting_defines.s  descriptor_read_union.s  eight.s  error.s  five.s  four.s  locality_runtime_read.s  mixed_pointer_raw.s  nine.s  offset_widened_inference.s  one.s  partial_variable_access.s  racy_increment.s  raw_access_undeclared.s  region_declared_late.s  region_overrun.s  region_read_only.s  region_write_only.s  seven.s  six.s  ten.s  terminal_access.s  three.s  three_ast.s  two.s  uart_hello_ast.s  unsupported_construct.s  vague_access.s
deploy/: Dockerfile  README.md  mpijob.yaml
examples/: compile.rs  translate.rs
scripts/: build-run.sh
src/: ast.rs  codegen.rs  dist.rs  draw.rs  explore.rs  hl.rs  lib.rs  main.rs  optimizer.rs  verifier.rs  verifier_types.rs
src/tests/: five.rs  four.rs  mod.rs  six.rs  three.rs  two.rs
std/: std.hl
tests/: annotated_store_overflow.rs  codegen.rs  conflicting_defines.rs  descriptor_read_union.rs  eight.rs  error.rs  five.rs  four.rs  heap_regions.rs  locality_runtime_read.rs  mixed_pointer_raw.rs  nine.rs  offset_widened_inference.rs  partial_variable_access.rs  racy_increment.rs  racy_store_annotated.rs  racy_store_inferred.rs  raw_access_undeclared.rs  region_declared_late.rs  region_overrun.rs  region_permissions.rs  seven.rs  six.rs  ten.rs  terminal_access.rs  three.rs  uart_hello.rs  unsupported_construct.rs  vague_access.rs
tests/annotated_store_overflow/: dialect.s  input.hl  main.rs
tests/assume/: dialect.s  emitted.s  input.hl  main.rs
tests/atomic_add/: dialect.s  emitted.s  input.hl  main.rs
tests/atomic_claim/: dialect.s  input.hl  main.rs
tests/binary_search/: dialect.s  emitted.s  input.hl  main.rs
tests/bubble_sort/: dialect.s  emitted.s  input.hl  main.rs
tests/cli/: main.rs
tests/collatz/: dialect.s  emitted.s  input.hl  main.rs
tests/common/: mod.rs
tests/compile_api/: main.rs
tests/conflicting_defines/: dialect.s  input.hl  main.rs
tests/count_zeros/: dialect.s  emitted.s  input.hl  main.rs
tests/descriptor_read_union/: dialect.s  emitted.s  input.hl  main.rs
tests/difference_array/: dialect.s  emitted.s  input.hl  main.rs
tests/dot_product/: dialect.s  emitted.s  input.hl  main.rs
tests/fannkuch_redux/: dialect.s  emitted.s  input.hl  main.rs
tests/fannkuch_v1/: dialect.s  emitted.s  input.hl  main.rs
tests/fannkuch_v2/: dialect.s  emitted.s  input.hl  main.rs
tests/gcd/: dialect.s  emitted.s  input.hl  main.rs
tests/global_zero_init/: dialect.s  emitted.s  input.hl  main.rs
tests/halfword_sum/: dialect.s  emitted.s  input.hl  main.rs
tests/heap_regions/: ast.s  dialect.s  emitted.s  input.hl  main.rs  optimized.s
tests/hpc_demo/: emitted.s  input.hl  main.rs
tests/indexed/: dialect.s  emitted.s  input.hl  main.rs
tests/inferred_widening/: dialect.s  emitted.s  input.hl  main.rs
tests/int_output/: dialect.s  emitted.s  input.hl  main.rs
tests/linux_hello/: dialect.s  emitted.s  input.hl  main.rs
tests/locality_runtime_read/: dialect.s  emitted.s  input.hl  main.rs
tests/mixed_pointer_raw/: dialect.s  emitted.s  input.hl  main.rs
tests/mpi_cluster/: main.rs
tests/offset_widened_inference/: dialect.s  emitted.s  input.hl  main.rs
tests/parallel_oracle_crosscheck/: annotated.s  inferred.s  main.rs  uart_hello.s
tests/parallel_probe/: dialect.s  input.hl  main.rs
tests/partial_variable_access/: dialect.s  emitted.s  input.hl  main.rs
tests/print_poly/: dialect.s  (+3 more)
(+104 files in other folders)
