[package]
name = "formal"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1.40", features =["valuable"]}
itertools = "0.13.0"
thiserror = "1.0.63"
num = "0.4.3"
sha2 = "0.10.8"
base64 = "0.22.1"

[dev-dependencies]
tracing-test = "0.2.5"
tracing-subscriber = "0.3.18"
tracing-assertions = "0.6.0"
# tracing-loki = "0.2.5"
# url = "2.5.2"
# tokio = { version = "1.40.0", features = ["full"] }
opentelemetry = "0.17.0"
tracing-opentelemetry = "0.17.2" 
opentelemetry-jaeger = "0.16.0"
indicatif = "0.17.9"