[package]
name = "formal"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1.40", features =["valuable"]}
itertools = "0.13.0"
thiserror = "1.0.63"
num = "0.4.3"
sha2 = "0.10.8"
base64 = "0.22.1"
# Work-stealing data parallelism for the verifier's configuration sweep / inner
# pool (Phase 1/2 of the HPC rework). CPU-bound, no async runtime needed.
rayon = "1.10"
# Serialization of the verifier's `Continuation` (and the `State` it carries) so
# frontier items can be transported across threads / cluster nodes (Phase 3).
serde = { version = "1", features = ["derive"] }
# Compact binary serde format; `use-std` gives `to_stdvec`/`from_bytes`.
postcard = { version = "1", features = ["use-std"] }
# Thousands separators for the big counts in progress reports / utilisation logs
# (`1_234_567` -> `1,234,567`); used by the HPC logs and the test progress streams.
thousands = "0.2"
# The distributed backend's MPI bindings (rsmpi), behind `--features hpc`; links
# a system MPI library at build time (see build.rs). Optional so the default
# build needs no MPI.
mpi = { version = "0.8", optional = true }

[features]
# The multi-node distributed backend (src/dist.rs). Requires a system MPI
# library + a C compiler to build; `build.rs` provisions them.
hpc = ["dep:mpi"]

# Optimize test builds: the verifier explores millions of steps for the larger
# programs (uart_hello). `debug-assertions` stay enabled (the default for the
# test/dev profiles), so the internal loop guards remain active.
[profile.test]
opt-level = 3

[dev-dependencies]
tracing-test = "0.2.5"
tracing-subscriber = "0.3.18"
tracing-assertions = "0.6.0"
# tracing-loki = "0.2.5"
# url = "2.5.2"
# tokio = { version = "1.40.0", features = ["full"] }
opentelemetry = "0.17.0"
tracing-opentelemetry = "0.17.2" 
opentelemetry-jaeger = "0.16.0"
